[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://ui/campaign/debug/EigenstateDebugOverlay.gd" id="1_script"]

[node name="EigenstateDebugOverlay" type="Control"]
script = ExtResource("1_script")
anchors_preset = 0
offset_left = 12.0
offset_top = 12.0
offset_right = 420.0
offset_bottom = 100.0

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 2

[node name="VersionLabel" type="Label" parent="Panel/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "vID: 0000000000000000  chk: 00"

[node name="StatusLabel" type="Label" parent="Panel/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "UNKNOWN"
